--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.9"
 pandas = "2.2.1"
 scikit-learn = "1.4.1.post1"
 matplotlib = "3.8.3"
+flask = "^3.0.2"
+python-dotenv = "^1.0.1"
+altair = "^5.2.0"
 
 
 [build-system]
