--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,18 +19,18 @@ repos:
         args: [ "--profile", "black", "--filter-files" ]
         exclude: test_example_module.py|run_pipeline.py
   - repo: https://github.com/psf/black
-    rev: 22.8.0 # Replace by any tag/version: https://github.com/psf/black/tags
+    rev: 24.3.0 # Replace by any tag/version: https://github.com/psf/black/tags
     hooks:
       - id: black
         name: black - consistent Python code formatting (auto-fixes)
         language_version: python # Should be a command that runs python3.6+
         exclude: test_example_module.py|run_pipeline.py
-  # - repo: https://github.com/PyCQA/flake8
-  #   rev: 5.0.4
-  #   hooks:
-  #     - id: flake8
-  #       name: flake8 - Python linting
-  #       exclude: test_example_module.py|run_pipeline.py
+  - repo: https://github.com/PyCQA/flake8
+    rev: 5.0.4
+    hooks:
+      - id: flake8
+        name: flake8 - Python linting
+        exclude: test_example_module.py|run_pipeline.py
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.0.3
     hooks:
